<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, StartingActivity!</string>
    <string name="app_name">OSSmlad-igateway</string>
    <string name="app_sms_received_total_desc">Total received:</string>
    <string name="app_sms_sent_total_desc">Total sent:</string>

    <!-- Preferences -->
    <string name="app_preference_first_title">Main settings</string>
    
    <string name="app_preference_broadcast_title">Enable processing SMS</string>
    <string name="app_preference_broadcast_summary">Enabled or disabled sms broadcastreceiver to process SMS in application</string>
    
    <string name="app_preference_updates_title">Updates interval</string>
    <string name="app_preference_updates_summary">How often updates will be performed. Current: </string>
    
    <string name="app_preference_server_title">Server URL</string>
    <string name="app_preference_server_summary">Default server URL to sent received SMS</string>
    
    <string-array name="app_preference_updateinterval">
        <item name="1000">Every 1 second</item>
        <item name="5000">Every 5 seconds</item>
        <item name="10000">Every 10 seconds</item>
        <item name="30000">Every 30 seconds</item>
        <item name="60000">Every 1 minute</item>
    </string-array>
    <string-array name="app_preference_updateintervalvalues">
        <item name="1000">1000</item>
        <item name="5000">5000</item>
        <item name="10000">10000</item>
        <item name="30000">30000</item>
        <item name="60000">60000</item>
    </string-array>

</resources>